k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: user-service
spec:
  type: ClusterIP # internal-only, never exposed outside the cluster
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
